# Computer-graphics-studies

./: .gitignore  CMakeLists.txt  GaussianBlur.cpp  GaussianBlur.h  Item.cpp  Item.h  Log.h  Source.cpp  UBO.cpp  UBO.h  WaterSimulation.cpp  WaterSimulation.h  camera.cpp  camera.h  engine.cpp  engine.h  items_setting.cpp  lightSource.cpp  lightSource.h  obj_reader.cpp  obj_reader.h  resource.h  shader.cpp  shader.h  shadowManager.cpp  shadowManager.h  texture.cpp  texture.h  utils.h
Computer graphics studies/: GaussianBlur.cpp  GaussianBlur.h  Item.cpp  Item.h  Source.cpp  UBO.cpp  UBO.h  WaterSimulation.cpp  WaterSimulation.h  bloom_postprocessing.frag  camera.cpp  camera.h  cube.cpp  cube.h  depth.frag  engine.cpp  engine.h  horn.frag  items_setting.cpp  lightSource.cpp  lightSource.h  model.cpp  model.h  obj_reader.cpp  obj_reader.h  phong.frag  phong.vert  quad.vert  shader.cpp  shader.h  shadowManager.cpp  shadowManager.h  simple.frag  simple.vert  simple_color.frag  simple_shader.frag  simple_shader.vert  terrain.cpp  terrain.h  tesselation.frag  (+7 more)
Computer graphics studies/shaders/: Computer graphics studies.aps  a  bloom_preprocessing.frag  depth.frag  depth.vert  horn.frag  phong.frag  phong.vert  simple.vert  simple_color.vert  water_final.frag  water_final.vert
shaders/: bloom_postprocessing.frag  bloom_preprocessing.frag  depth.frag  depth.vert  grass.frag  grass.vert  horn.frag  one_axis_gaussian.frag  phong.frag  phong.vert  quad.frag  quad.vert  simple.frag  simple.vert  simple_light.frag  simple_light.vert  terrain.frag  terrain.vert  water_final.frag  water_final.vert
third parties/glew/lib/cmake/glew/: glew-config.cmake
third parties/glew/lib/pkgconfig/: glew.pc
third parties/glfw/lib/pkgconfig/: glfw3.pc
world_generation/: grass.cpp  grass.h  terrain.cpp  terrain.h  terrainGenerator.cpp  terrainGenerator.h  terrainHandler.cpp  terrainHandler.h  trees.cpp  trees.h  worldHandler.cpp  worldHandler.h  world_chunk.cpp  world_chunk.h  world_chunk_info.h
world_generation/entities/: trees.cpp  trees.h
world_generation/terrain/: terrain.cpp  terrain.h  terrainGenerator.h  terrainHandler.cpp  terrainHandler.h
